sg-pub.tf
resource "aws_security_group" "sg-ssh-pub" {
  name        = "allow_ssh-from-public"
  description = "Allow ssh inbound traffic"
  vpc_id      = aws_vpc.main.id

  ingress {
    description = "ssh"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = concat([aws_vpc.main.cidr_block], var.home_ips)
  }

  ingress {
    description = "vpn"
    from_port   = 1194
    to_port     = 1194
    protocol    = "udp"
    cidr_blocks = concat([aws_vpc.main.cidr_block], var.home_ips)
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "web"
  }
}
